spacing fixes

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -99,7 +99,8 @@
     position: relative;
     margin: 0 auto;
     width: 60%;
-    margin-left: 150px;
+    margin-left: 220px;
+    margin-right:-3em;
 
   }
 
